fix clamp hue shifting

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
 
 .button-01{
     @apply bg-gray-400 p-1 text-white rounded-md text-xl shadow-md hover:cursor-pointer;
+    line-height: 1.0rem !important;
 }
 
 .main-page__header-container{
